<resources>
    <string name="app_name">Parkme</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_google">Inicia sesión con Google</string>
    <string name="historial_item_importe_total">Importe Total</string>
    <string name="historial_item_direccion">Dirección</string>
    <string name="historial_item_precio_por_hora">Precio por hora</string>
    <string name="historial_item_hora_ingreso">hora de ingreso</string>
    <string name="historial_item_hora_egreso">hora de egreso</string>
    <string name="historial_item_tiempo_total">tiempo total</string>
    <string name="historial_item_nombre_dueno">Nombre dueño</string>
    <string name="welcome">Bienvenidos</string>
    <string name="web_client_id">653166425105-jjlbis77vg874gkam3lhn402muest8b5.apps.googleusercontent.com</string>
    <string name="web_client_secret">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</string>
    <string name="aqu_est_n_tus_ltimas_reservas">Aquí están tus últimas reservas</string>
    <string name="frg_reservar_cochera_estacionar_ahora">Estacionar Ahora!</string>
    <string name="frg_reservar_cochera_leyenda">Usted está por asumir el compromiso de utilizar y cuidar este espacio. ¿Está seguro que quiere realizar la reserva?</string>
    <string name="volver_buttom">Volver</string>
    <string name="frg_product_titulo">TITULO</string>
    <string name="frg_product_precio">Precio</string>
    <string name="frg_product_descripcion">Descripción</string>
    <string name="frg_product_product_description">product_description</string>
    <string name="frg_product_pay_with_google">Pagar con Google</string>
    <string name="frg_product_imagen_cochera">Imagen cochera</string>
    <string name="frg_perfil_perfil">Perfil</string>
    <string name="frg_perfil_nombre">Nombre</string>
    <string name="frg_perfil_logout">Desloguearse</string>
    <string name="frg_perfil_imagen_usuario">Imagen del usuario</string>
    <string name="frg_mis_cocheras">Agregar Cochera</string>
    <string name="frg_explore_map_encontra">Encontrá tu ParkMe</string>
    <string name="frg_estado_reserva_dueno">Dueño</string>
    <string name="frg_estado_reserva_call">Llamada</string>
    <string name="frg_estado_reserva_nombre">Nombre</string>
    <string name="frg_estado_reserva_cant_horas">Cantidad de Hs.</string>
    <string name="frg_estado_reserva_precio_total_horas">Precio total Reserva:</string>
    <string name="frg_estado_reserva_tiempo_reserva">Tiempo de Reserva</string>
    <string name="frg_estado_reserva_aca_va_precio_total">  Se calculara al egresar</string>
    <string name="Loren">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem pellentesque velit donec congue. Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesque</string>
    <string name="frg_estado_reserva_nombre_cochera">Nombre Cochera</string>
    <string name="frg_estado_reserva_locacion">Locación</string>
    <string name="frg_estado_reserva_precio_por_hora">Precio x Hs:</string>
    <string name="frg_estado_reserva_valor_hora">$1200</string>
    <string name="frg_estado_reserva_egreso">Salir de la Cochera</string>
    <string name="frg_reserva_imagen_cochera">Imagen de la cochera</string>
    <string name="frg_reserva_imagen_dueno">Imagen dueño</string>
    <string name="frg_reserva_imagen_locacion">Imagen locacion</string>
    <string name="frg_cochera_detail_owner_icon_locacion"></string>
    <string name="frg_cochera_detail_owner_nombre_cochera">Nombre Cochera</string>
    <string name="frg_cochera_detail_owner_locacion">Buenos Aires</string>
    <string name="frg_cochera_detail_owner_precio_por_hora_title">Precio x Hs: $</string>
    <string name="frg_cochera_detail_owner_nombre_dueno_title">Nombre dueño Cochera</string>
    <string name="frg_cochera_detail_owner_disponibilidad_cochera_title">Disponibilidad Cochera: </string>
    <string name="frg_cochera_detail_owner_disponibilidad_cochera">9Hs</string>
    <string name="frg_cochera_detail_owner_precio_por_hora">1200</string>
    <string name="frg_cochera_detail_owner_editar">Editar</string>
    <string name="frg_cochera_detail_owner_eliminar">Eliminar</string>
    <string name="frg_cochera_detail_owner_imagen_cochera"></string>
    <string name="frg_cochera_detail_icon_location"></string>
    <string name="frg_cochera_detail_nombre_cochera">Nombre Cochera</string>
    <string name="frg_cochera_detail_locacion">Buenos Aires</string>
    <string name="frg_cochera_detail_precio_por_hora">$1200</string>
    <string name="frg_cochera_detail_precio_por_hora_title">Precio x Hs:</string>
    <string name="frg_cochera_detail_nombre_dueno_cochera">Nombre dueño Cochera</string>
    <string name="frg_cochera_detail_estacionar_ahora">Estacionar Ahora!</string>
    <string name="frg_cochera_detail_programar">Programar</string>
    <string name="frg_cochera_detail_imagen_cochera">Imagen cochera</string>
    <string name="frg_cochera_detail_descripción_cochera">Descripción de la cochera</string>
    <string name="frg_agregar_cochera_confirmar">Confirmar</string>
    <string name="frg_agregar_cochera_carga_imagen">carga imagen de la cochera</string>
    <string name="frg_agregar_cochera_nombre_cochera">Nombre Cochera</string>
    <string name="frg_agregar_cochera_precio_hora">Precio por hora $</string>
    <string name="frg_agregar_cochera_descripcion">Descripción</string>
    <string name="frg_agregar_cochera_disponibilidad">Disponibilidad</string>
    <string name="frg_cochera_dueno_edit_carga_imagen_cochera">Carga de nueva imagen de cochera</string>
    <string name="frg_cochera_dueno_edit_nombre_cochera">Nombre Cochera</string>
    <string name="frg_cochera_dueno_edit_precio_por_hora">Precio por hora $</string>
    <string name="frg_cochera_dueno_edit_descripcion">Descripción</string>
    <string name="frg_cochera_dueno_edit_disponibilidad">Disponibilidad</string>
    <string name="frg_cochera_dueno_edit_aceptar">Editar</string>
    <string name="frg_cochera_dueno_edit_no_editable">Campo no editable</string>
    <string name="frg_cochera_dueno_edit_"></string>
    <string name="_mis_cocheras_item_imagen_descripcion">Imagen de cochera</string>
    <string name="_mis_cocheras_item_ubicacion">Juncal y Larrea</string>
    <string name="_mis_cocheras_item_titulo_cochera">Mis Cocheras Item</string>
    <string name="_mis_cocheras_item_precio_por_hora">$750 la hora</string>
    <string name="view_parkslot_item_imagen_cochera">Imagen de la cochera</string>
    <string name="view_parkslot_item_titulo_cochera">Impecable Cochera en Recoleta</string>
    <string name="view_parkslot_item_locacion">Juncal y Larrea</string>
    <string name="view_parkslot_item_precio_hora">$1000Ars/hora</string>
    <string name="view_parkslot_item_scren_content">scren content</string>
    <string name="activity_splash_bienvenida">Bienvenido a Parkme, cargando datos!</string>
    <string name="activity_splash_logo">Logo ParkMe</string>
    <string name="activity_login_imagen">Imagen portada</string>
    <string name="activity_login_imagen_parkme">Imagen ParkMe</string>
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyDW5u0qurjfVpPY3PVH0yZpauP75T2w1FY</string>
    <string name="eTDireccion_hint" translatable="false">Dirección</string>
    <string name="autocomplete_address2_label" translatable="false">Apartment, unit, suite, or floor #</string>
    <string name="autocomplete_city_label" translatable="false">City</string>
    <string name="autocomplete_state_label" translatable="false">State/Province</string>
    <string name="autocomplete_postal_label" translatable="false">Postal code</string>
    <string name="autocomplete_country_label" translatable="false">Country/Region</string>
    <string name="autocomplete_proximity_check" translatable="false">Check device proximity</string>
    <string name="autocomplete_map_label" translatable="false">Mapa de la dirección seleccionada</string>
    <string name="autocomplete_save_button" translatable="false">Aceptar/Agregar</string>
    <string name="autocomplete_reset_button" translatable="false">Clear form</string>
    <string name="autocomplete_location_origin_label" translatable="false">Location Origin (format: -33.2, 128.2)
    </string>
    <string name="autocomplete_location_bias_label" translatable="false">Location Bias (format: -33.2, 128.2)</string>
    <string name="autocomplete_location_restriction_label" translatable="false">Location Restriction (format: -33.2,
        128.2)
    </string>
    <string name="autocomplete_location_origin_hint" translatable="false">Origin (lat, lng)</string>
    <string name="autocomplete_location_south_west_hint" translatable="false">South West (lat, lng)</string>
    <string name="autocomplete_location_north_east_hint" translatable="false">North East (lat, lng)</string>
    <string name="autocomplete_use_session_token" translatable="false">(Predictions-only) Use session token?</string>
    <string name="autocomplete_activity_overlay_mode" translatable="false">Overlay mode?</string>
    <string name="autocomplete_support_fragment_text_label" translatable="false">Autocomplete Support Fragment:</string>
    <string name="autocomplete_fragment_text_label" translatable="false">Autocomplete Fragment:</string>
    <string name="autocomplete_support_fragment_update_button" translatable="false">Update Support Fragment</string>
    <string name="autocomplete_fragment_update_button" translatable="false">Update Fragment</string>
    <string name="autocomplete_activity_button" translatable="false">Open Activity</string>
    <string name="autocomplete_skipped_message" translatable="false">Address accepted without checking proximity
    </string>
    <string name="direccion_1">Direccion 1</string>
    <string name="Required">Campo Requerido</string>
    <string name="store_name" translatable="false">Auto T-Shirt Shop</string>
    <string name="google_pay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="google_wallet_status_unavailable" translatable="false">Unfortunately, Google Wallet is not available on this phone.</string>
    <string name="google_pay_status_checking" translatable="false">Checking if Google Pay is available...</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="add_google_wallet_success" translatable="false">The pass was added successfully!</string>
    <string name="ya_tiene_una_reserva">Ya tiene una reserva</string>
    <string name="confirmar_reserva">Confirmar Reserva</string>
    <string name="ya_tiene_una_reserva_en_curso">Ya tiene una reserva en curso</string>
    <string name="estacionar_ahora">Estacionar Ahora!</string>
    <string name="realizar_checkout_cochera_anterior">Realizá el Checkout de tu cochera anterior</string>
    <string name="alcanzaste_el_limite_de_una_reserva">Alcanzaste el límite de una Reserva</string>
    <string name="programa_reserva">Programa reserva</string>
    <string name="switch_24_7_label">Disponible 24/7</string>
    <string name="monday">Lunes</string>
    <string name="add_time_range">agregá una ventana horaria</string>
    <string-array name="days_of_week">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>
</resources>