<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        tools:context=".MainActivity">


    <LinearLayout
            android:id="@+id/fragment_container_agregarCochera_item_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/simpleImageButton_item_view"
                android:contentDescription="@string/frg_cochera_dueno_edit_carga_imagen_cochera"
                android:layout_width="124dp"
                android:layout_height="108dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/upload_image_icon"
                android:clickable="true"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nombreCocheraContainer_item_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:helperText="@string/Required"
                app:helperTextTextColor="@color/design_default_color_primary_dark"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/ETNombreCocheraLength">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eTNombreCochera_item_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/frg_cochera_dueno_edit_nombre_cochera"
                    android:maxLength="@integer/ETNombreCocheraLength" tools:ignore="MissingClass"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/direccionContainer_item_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:helperText="@string/frg_cochera_dueno_edit_no_editable"
                app:helperTextTextColor="@color/cardview_dark_background"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/ETDireccionLength">
            <com.example.parkme.models.AutocompleteEditText
                    android:id="@+id/eTDireccion_item_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/eTDireccion_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:background="@color/common_google_signin_btn_text_dark_disabled"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <ViewStub
                android:id="@+id/stub_map_item_view"
                android:inflatedId="@+id/panel_map"
                android:layout="@layout/fragment_agregar_cochera_map"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="bottom"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/precioPorHoraContainer_item_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:helperText="@string/Required"
                app:helperTextTextColor="@color/design_default_color_primary_dark">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eTPrecioPorHora_item_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/frg_cochera_dueno_edit_precio_por_hora"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descripcionContainer_item_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:helperText="@string/Required"
                app:helperTextTextColor="@color/design_default_color_primary_dark"
                app:counterMaxLength="@integer/ETDescripcionLength"
                app:counterEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eTDescripcion_item_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/frg_cochera_dueno_edit_descripcion"
                    android:maxLength="@integer/ETDescripcionLength"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch24_7_editar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_24_7_label"
            android:checked="true"
            android:layout_marginTop="16dp" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dividerAddDateTimeRange"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/disponibilidadContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="16dp">
            <TextView
                android:id="@+id/textDisponibilidadTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Disponibilidad"
                android:visibility="gone"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textAddDateTimeRangeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Agregar Nueva Disponibilidad"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/imgAddDateTimeRangeEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_edit_calendar_24"
            android:contentDescription="@string/add_time_range"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/button_aceptar_edit"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                android:layout_marginTop="10dp"
                    android:text="@string/frg_cochera_dueno_edit_aceptar"/>


    </LinearLayout>
</ScrollView>